--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sarah Bootstrap Template - Index</title>
+  <title>Sylvia Asio Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,8 +27,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Sarah - v4.7.0
-  * Template URL: https://bootstrapmade.com/Sarah-free-creative-bootstrap-theme/
+  * Template Name: Sylvia Asio - v4.7.0
+  * Template URL: https://bootstrapmade.com/Sylvia-free-creative-bootstrap-theme/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -98,7 +98,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Sarah Thomso</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Sylvia Asio</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
@@ -658,7 +658,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Sarah Thomson</h3>
+      <h3>Sylvia Asio</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -668,13 +668,13 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Sarah</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Sylvia Asio</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sarah-free-creative-bootstrap-theme/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/Sylvia-free-creative-bootstrap-theme/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
