--- a/home.html
+++ b/home.html
@@ -101,12 +101,12 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Sylvia Asio</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vancouver, Canada</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
